Always show vertical scrollbar to prevent flex components from flickering infinitely on certain screen sizes.

--- a/jacques-web/app.css
+++ b/jacques-web/app.css
@@ -106,6 +106,7 @@ sound-list {
     padding-left: 40px;
     padding-right: 40px;
     padding-top: 5px;
+    overflow-y: scroll
 }
 
 #content .md-button.share {
